tests/rosetta/out/Go/anonymous-recursion-1.error
run error: exit status 1
# command-line-arguments
../../tests/rosetta/out/Go/anonymous-recursion-1.go:50:6: main redeclared in this block
	../../tests/rosetta/out/Go/anonymous-recursion-1.go:30:6: other declaration of main
